--- a/analysis_workflow.Rmd
+++ b/analysis_workflow.Rmd
@@ -87,9 +87,15 @@ get_recorded_data <- function(web_id, tag_name, start_time = "*-3d", end_time = 
 
   if (is.null(items) || length(items) == 0) return(NULL)
 
+  # Handle complex value (e.g. Digital State object)
+  vals <- items$Value
+  if (is.data.frame(vals) && "Value" %in% names(vals)) {
+    vals <- vals$Value
+  }
+
   data.frame(
     Timestamp = items$Timestamp,
-    Value = items$Value,
+    Value = vals,
     Tag = tag_name,
     stringsAsFactors = FALSE
   )
